navbar z-index fix

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -13,6 +13,7 @@
   height: 56px;
   background-color: var(--cardsbg);
   border-bottom: 1px solid var(--cardsbg);
+  z-index: 3;
 }
 @media screen and (max-width:576px) {
   .navbar {
